<resources>
    <!-- App Strings -->
    <string name="app_name">StagTraX</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signin_with_fairfield">...or sign in with your Fairfield Google account:</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="server_client_id">497818578165-cto7p246k0rto95qste1ttbot36hv3tk.apps.googleusercontent.com</string>

    <!-- Login Strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login or Register</string>
    <string name="reset">Reset Password</string>

    <!-- Register Strings -->
    <string name="confirm_password">Confirm Password</string>
    <string name="graduation_year">Expected Graduation Year</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string-array name="user_type">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>

    <!-- Navigation -->
    <string name="title_home">home</string>
    <string name="title_results">results</string>
    <string name="title_settings">settings</string>

</resources>
