<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.fairfield.stagtrax.LoginActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="8dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signin_with_fairfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_with_fairfield" />

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/desc_google_icon"
                android:src="@drawable/googleg_color" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signed_out"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_optional_action"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Optional Action"
                tools:visibility="visible" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/sign_out_and_disconnect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/sign_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:id="@+id/disconnect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
